# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py
gendiff/core/: __init__.py  cli.py  config.py  gendiff.py  generator.py  parser.py
gendiff/core/formats/: json.py
gendiff/formats/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
src/gendiff/core/: config.py  diff_descriptors.py  gendiff.py
src/gendiff/core/formats/: __init__.py  json.py
src/gendiff/scripts/: gendiff.py
tests/: conftest.py  constants.py  fixtures.py  test_diff_descriptors.py  test_json.py  test_parser.py  test_plain.py  test_stylish.py
tests/fixture_files/: correct_plain.txt  correct_stylish.txt
tests/mock/: correct_flat.txt  file1.json  file2.json  file2.yml
