[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Vitaliy Vorobyov <vitalik.w555@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

packages = [
  { include = "gendiff" },
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
